k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud
  namespace: crud
spec:
  type: NodePort
  selector:
    app: crud
  ports:
    - port: 80
      targetPort: 9005
      protocol: TCP
